--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="description" content="Charles Capdeville Portfolio Unity Associate C# and HLSL">
         <link href="main.css" rel="stylesheet">
-        <title>Charles Capdeville Portefolio</title>
+        <title>Charles Capdeville Portfolio</title>
     </head>
     <body>
         <nav id="contact">
             <a href="https://github.com/Totchinuko" rel="noopener noreferrer" target="_blank">
-                <img src="img\github.94c29d94.svg" alt="GitHub" />
+                <img src="img\githubColor.svg" alt="GitHub" />
                 <span>Totchinuko</span>
             </a>
             <a href="https://www.linkedin.com/in/charles-capdeville-73724462/" rel="noopener noreferrer" target="_blank">
-                <img src="img\linkedin.25169e0a.svg" alt="Linkedin" />
+                <img src="img\linkedin.svg" alt="Linkedin" />
                 <span>Charles Capdeville</span>
             </a>
             <a href="https://twitter.com/totchinuko" rel="noopener noreferrer" target="_blank">
-                <img src="img\twitter.e6285676.svg" alt="Twitter" />
+                <img src="img\twitter.svg" alt="Twitter" />
                 <span>@Totchinuko</span>
             </a>
         </nav>
         <div id="header">
-            <img src="img/unity.png" id="unity-logo" />
+            <img src="img/unity.svg" id="unity-logo" />
             <div class="content">
                 <h1>CAPDEVILLE Charles</h1>
                 <h2>Unity Certified Developer</h2>
@@ -32,7 +32,146 @@
             </div>
         </div>
         <div id="main">
-
+            <h3>Who am I ?</h3>
+            <p>I'm Charles, 31 years old, and I've been into computer programming since I was 14.</p>
+            <p>I've been self learning for more than half my life, first in web development where I quickly demonstrated my capacity to adapt and learn during my internships, and since 2017, I've been getting experience as a game developer, mostly around the Unity Engine. I'm also working on desktop apps using WPF and C#.</p>
+            <h3>Experiences</h3>
+            <div class="container">
+                <div class="card">
+                    <img src="img/cned.jpg" alt="CNED logo"/>
+                    <h4>CNED</h4>
+                    <p>Bac +2</p>
+                    <p>Informatique de gestion</p>
+                </div>
+                <div class="card">
+                    <img src="img/3wa.png" alt="3WA Logo"/>
+                    <h4>3W Academy</h4>
+                    <p>Unity Certified Associate</p>
+                    <p>Unity / C#</p>
+                </div>
+                <div class="card">
+                    <img src="img/unreal.svg" alt="Unreal logo"/>
+                    <h4>Independant</h4>
+                    <p>Unreal Developer</p>
+                    <p>2018-2021</p>
+                </div>
+                <div class="card">
+                    <img src="img/unity.svg" alt="Unity logo"/>
+                    <h4>Independant</h4>
+                    <p>Unity Developer</p>
+                    <p>2017-2018</p>
+                </div>
+                <div class="card">
+                    <img src="img/pyrat.png" alt="Pyrat.net logo"/>
+                    <h4>Pyrat.net</h4>
+                    <p>Front-End Developer</p>
+                    <p>2010/2011</p>
+                </div>
+            </div>
+            <h3>Tech</h3>
+            <div class="container">
+                <div class="card tech">
+                    <img src="img/csharp.svg" alt="C# logo"/>
+                    <h4>C#</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/unity.svg" alt="Unity logo"/>
+                    <h4>HLSL</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/wpf.png" alt="WPF logo"/>
+                    <h4>WPF</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/js.svg" alt="JavaScript logo"/>
+                    <h4>JavaScript</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/jquery.svg" alt="JQuery logo"/>
+                    <h4>JQuery</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/html5.svg" alt="HTML5 logo"/>
+                    <h4>HTML 5</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/css3.svg" alt="CSS3 logo"/>
+                    <h4>CSS 3</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/mysql.svg" alt="MySQL logo"/>
+                    <h4>MySQL</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/php.svg" alt="PHP logo"/>
+                    <h4>PHP</h4>
+                </div>
+            </div>
+            <h3>Tools</h3>
+            <div class="container">
+                <div class="card tech">
+                    <img src="img/unity.svg" alt="Unity logo"/>
+                    <h4>Unity Engine</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/unreal.svg" alt="Unreal logo"/>
+                    <h4>Unreal Engine</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/blender.svg" alt="Blender logo"/>
+                    <h4>Blender</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/substance.svg" alt="Substance Painter logo"/>
+                    <h4>Substance Painter</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/visualstudio.svg" alt="Visual Studio logo"/>
+                    <h4>Visual Studio</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/vscode.svg" alt="Visual Studio Code logo"/>
+                    <h4>Visual Studio Code</h4>
+                </div>
+                <div class="card tech">
+                    <img src="img/github.svg" alt="Git logo"/>
+                    <h4>Git</h4>
+                </div>
+            </div>
+            <h3>Recent Projects</h3>
+            <div class="pcontainer">
+                <div class="project">
+                    <div class="video">
+                        <iframe width="320" height="180" src="https://www.youtube.com/embed/uVUgQZisoso" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="text">
+                        <h4>Archives</h4>
+                        <p>Built in roughly 2 month during my 3 month course at the 3W Academy for the Unity Certification, Archives is a rogue like twin stick shooter, featuring a lot of procedural generation, the use of HDRP and VFX. I've done everything in it at the exeption of the sound and music assets.</p>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="project">
+                    <a href="img/hellevator.png" target="_blank"><img class="picture" src="img/hellevator.png" alt="Hellevator start screen" /></a>
+                    <div class="text">
+                        <h4>Hellevator</h4>
+                        <p>Made during the Ludum Dare 48 in a team of 3, I made most of the code, from the character movement, to the AI navigation, in 72 hours. The game sadly, was not finished.</p>
+                        <div class="icons">
+                            <a href="https://github.com/Totchinuko/ldjam48" target="_blank"><img src="img/githubColor.svg" alt="Github project"></a>
+                            <a href="https://yodaxy.itch.io/hellevator" target="_blank"><img src="img/itch.svg" alt="itch.io submission"></a>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="project">
+                    <a href="img/conanScreen.png" target="_blank"><img class="picture" src="img/conanScreen.png" alt="Conan Project logo" /></a>
+                    <div class="text">
+                        <h4>Roleplay mod for Conan Exile</h4>
+                        <p>Culminating at 5GB of data and more than 4000 files, this mod overall the game completly, revamping from scratch various aspect of the game. From roleplay tools, to survival, crafting, or the huge amount of tools and configuration available for server owners to create new story and bring them to life into the game.</p>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+            <div style="height: 200px;"></div>
         </div>
     </body>
 </html>
