More improvement to small screen display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <div id="header">
-            <img src="img/unity.svg" id="unity-logo" />
+            <div class="logo">
+                <img src="img/unity.svg" />
+            </div>
             <div class="content">
                 <h1>CAPDEVILLE Charles</h1>
                 <h2>Unity Certified Developer</h2>
